# dockery

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/workflows/: release.yml
src/dockery/: buttons.py  containers.py  custom_widgets.py  dockery.py  gui.py  images.py  logs.py  main.py  models.py  networks.py  style.css  utils.py  volumes.py
